Correction bug ouverture page Creer tournois (mauvais href)

--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -57,7 +57,7 @@
               src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="../assets/css/createTournament.css">Créer tournois</a>
+            <a href="./assets/css/createTournament.css">Créer tournois</a>
           </li>
           <li>
             <img
