Ajout de balise <a> sur les cartes tournois pour renvoyer vers TournamentSheet et quelques modif CSS un peu partout

--- a/html/index.html
+++ b/html/index.html
@@ -157,6 +157,7 @@
           <h3>Trouver un tournoi :</h3>
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -175,10 +176,12 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -197,10 +200,12 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -219,10 +224,12 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -241,10 +248,12 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -263,10 +272,12 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -285,10 +296,12 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -307,10 +320,12 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
           <!-- carte tournois -->
           <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -329,8 +344,10 @@
             <h5>Région</h5>
             <div class="divider-card"></div>
             <h6>Nom de l'organisateur</h6>
+          </a>
           </div>
           <!-- fin carte tournoi -->
+          
         </div>
       </div>
     </main>
