--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -50,14 +50,14 @@
               src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
-            <a href="./OrganisedTournament.html">Mes tournois</a>
+            <a href="">Mes tournois</a>
           </li>
           <li>
             <img
               src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="./assets/css/createTournament.css">Créer tournois</a>
+            <a href="../assets/css/createTournament.css">Créer tournois</a>
           </li>
           <li>
             <img
@@ -131,12 +131,12 @@
           <!-- CONTAINER  GENERAL -->
 
           <div class="general box-info">
-            <div class="title-container-profil dropdown-general-profil">
+            <div class="title-container-profil ">
               <h2>Général</h2>
               <img
                 src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown"
+                class="dropdown dropdown-general-profil"
               />
             </div>
             <div class="box-general box-dropdown">
@@ -174,12 +174,12 @@
 
           <!-- CONTAINER CHANGE PASSWORD -->
           <div class="change-password box-info">
-            <div class="title-container-profil dropdown-change-password">
+            <div class="title-container-profil ">
               <h2>Changement de mot de passe</h2>
               <img
                 src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown"
+                class="dropdown dropdown-change-password"
               />
             </div>
             <div class="box-change-password box-dropdown">
@@ -209,12 +209,12 @@
 
           <!-- CONTAINER CHANGE EMAIL -->
           <div class="change-mail box-info">
-            <div class="title-container-profil dropdown-change-mail">
+            <div class="title-container-profil ">
               <h2>Changement d'email</h2>
               <img
                 src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown"
+                class="dropdown dropdown-change-mail"
               />
             </div>
             <div class="box-change-mail box-dropdown">
@@ -234,12 +234,12 @@
 
           <!-- CONTAINER DELETE ACCOUNT -->
           <div class="delete-account box-info">
-            <div class="title-container-profil dropdown-delete-account">
+            <div class="title-container-profil ">
               <h2>Supprimer mon compte</h2>
               <img
                 src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown"
+                class="dropdown dropdown-delete-account"
               />
             </div>
             <div class="box-delete box-dropdown">
@@ -250,7 +250,7 @@
                 type="password"
               />
               <div class="container-cta">
-                <button class="cta">Mettre a jour</button>
+                <button class="cta">Supprimer </button>
               </div>
             </div>
           </div>
@@ -259,14 +259,14 @@
 
       <!-- HISTORIQUE DES TOURNOIS -->
       <div class="container-history">
-        <div class="history-tournament-profil dropdown-history-profil">
+        <div class="history-tournament-profil ">
           <div class="container-card">
             <div class="title-container-profil">
               <h2>Historique de mes tournois</h2>
               <img
                 src="../assets/img/General/arrow-down-sign-to-navigate.png"
                 alt="fleche pour ouvrir et fermer la fenetre des parametre"
-                class="dropdown"
+                class="dropdown dropdown-history-profil"
               />
             </div>
 
