Création et conception de la page subTournament

--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
               src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
-            <a href="">Jouer</a>
+            <a href="./subTournament.html">Jouer</a>
           </li>
           <li class="divider-nav"></li>
           <li>
