--- a/html/subTournament.html
+++ b/html/subTournament.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GamingTournament : Tournois organisés</title>
+    <title>GamingTournament : Tournois a participer</title>
     <!-- font ROBOTO CONDENSED -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -99,7 +99,7 @@
     <main>
       <div class="main-container-organised-tournament">
         <div class="container-organised-tournament">
-          <h1>Mes tournois organisés :</h1>
+          <h1>Mes tournois a venir :</h1>
           <div class="box-organised-tournament">
             <!-- carte tournois -->
             <div class="card-tournament">
