--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -50,21 +50,21 @@
               src="../assets/img/General/calendar.png"
               alt="Icone mes tournois"
             />
-            <a href="">Mes tournois</a>
+            <a href="./OrganisedTournament.html">Mes tournois</a>
           </li>
           <li>
             <img
               src="../assets/img/General/crown.png"
               alt="Icone creation de tournoi"
             />
-            <a href="../assets/css/createTournament.css">Créer tournois</a>
+            <a href="./createTournament.html">Créer tournois</a>
           </li>
           <li>
             <img
               src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
-            <a href="">Jouer</a>
+            <a href="./subTournament.html">Jouer</a>
           </li>
           <li class="divider-nav"></li>
           <li>
@@ -270,137 +270,201 @@
               />
             </div>
 
-            <!-- carte tournois -->
+            
             <div class="box-history-profil box-dropdown">
-              <div class="card-tournament">
-                <div class="banner-card-tournament"></div>
-                <h4>
-                  T1 tournament | 16 teams | direct elimination | Cashprize
-                  2500RP
-                </h4>
-                <div class="info-date-tournament">
-                  <img
-                    src="../assets/img/General/schedule.png"
-                    alt="Icone calendrier"
-                  />
-                  <p>Tue dec 24</p>
-                  <img
-                    src="../assets/img/General/clock.png"
-                    alt="Icone horloge"
-                  />
-                  <p>19:00 AM CET</p>
-                  <p>in 3 days</p>
-                </div>
-                <div class="divider-card"></div>
-                <h5>Région</h5>
-                <div class="divider-card"></div>
-                <h6>Nom de l'organisateur</h6>
-              </div>
-              <!-- fin carte tournoi -->
-              <!-- carte tournois -->
-              <div class="card-tournament">
-                <div class="banner-card-tournament"></div>
-                <h4>
-                  T1 tournament | 16 teams | direct elimination | Cashprize
-                  2500RP
-                </h4>
-                <div class="info-date-tournament">
-                  <img
-                    src="../assets/img/General/schedule.png"
-                    alt="Icone calendrier"
-                  />
-                  <p>Tue dec 24</p>
-                  <img
-                    src="../assets/img/General/clock.png"
-                    alt="Icone horloge"
-                  />
-                  <p>19:00 AM CET</p>
-                  <p>in 3 days</p>
-                </div>
-                <div class="divider-card"></div>
-                <h5>Région</h5>
-                <div class="divider-card"></div>
-                <h6>Nom de l'organisateur</h6>
-              </div>
-              <!-- fin carte tournoi -->
-              <!-- carte tournois -->
-              <div class="card-tournament">
-                <div class="banner-card-tournament"></div>
-                <h4>
-                  T1 tournament | 16 teams | direct elimination | Cashprize
-                  2500RP
-                </h4>
-                <div class="info-date-tournament">
-                  <img
-                    src="../assets/img/General/schedule.png"
-                    alt="Icone calendrier"
-                  />
-                  <p>Tue dec 24</p>
-                  <img
-                    src="../assets/img/General/clock.png"
-                    alt="Icone horloge"
-                  />
-                  <p>19:00 AM CET</p>
-                  <p>in 3 days</p>
-                </div>
-                <div class="divider-card"></div>
-                <h5>Région</h5>
-                <div class="divider-card"></div>
-                <h6>Nom de l'organisateur</h6>
-              </div>
-              <!-- fin carte tournoi -->
-              <!-- carte tournois -->
-              <div class="card-tournament">
-                <div class="banner-card-tournament"></div>
-                <h4>
-                  T1 tournament | 16 teams | direct elimination | Cashprize
-                  2500RP
-                </h4>
-                <div class="info-date-tournament">
-                  <img
-                    src="../assets/img/General/schedule.png"
-                    alt="Icone calendrier"
-                  />
-                  <p>Tue dec 24</p>
-                  <img
-                    src="../assets/img/General/clock.png"
-                    alt="Icone horloge"
-                  />
-                  <p>19:00 AM CET</p>
-                  <p>in 3 days</p>
-                </div>
-                <div class="divider-card"></div>
-                <h5>Région</h5>
-                <div class="divider-card"></div>
-                <h6>Nom de l'organisateur</h6>
-              </div>
-              <!-- fin carte tournoi -->
-              <!-- carte tournois -->
-              <div class="card-tournament">
-                <div class="banner-card-tournament"></div>
-                <h4>
-                  T1 tournament | 16 teams | direct elimination | Cashprize
-                  2500RP
-                </h4>
-                <div class="info-date-tournament">
-                  <img
-                    src="../assets/img/General/schedule.png"
-                    alt="Icone calendrier"
-                  />
-                  <p>Tue dec 24</p>
-                  <img
-                    src="../assets/img/General/clock.png"
-                    alt="Icone horloge"
-                  />
-                  <p>19:00 AM CET</p>
-                  <p>in 3 days</p>
-                </div>
-                <div class="divider-card"></div>
-                <h5>Région</h5>
-                <div class="divider-card"></div>
-                <h6>Nom de l'organisateur</h6>
-              </div>
-              <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+               <!-- carte tournois -->
+          <div class="card-tournament">
+            <a href="./tournamentSheet.html" target="_blank">
+            <div class="banner-card-tournament"></div>
+            <h4>
+              T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
+            </h4>
+            <div class="info-date-tournament">
+              <img
+                src="../assets/img/General/schedule.png"
+                alt="Icone calendrier"
+              />
+              <p>Tue dec 24</p>
+              <img src="../assets/img/General/clock.png" alt="Icone horloge" />
+              <p>19:00 AM CET</p>
+              <p>in 3 days</p>
+            </div>
+            <div class="divider-card"></div>
+            <h5>Région</h5>
+            <div class="divider-card"></div>
+            <h6>Nom de l'organisateur</h6>
+          </a>
+          </div>
+          <!-- fin carte tournoi -->
+              
             </div>
           </div>
         </div>
