--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -89,6 +89,10 @@
           </li>
         </ul>
       </nav>
+
+
+      <!-- LISTE LATERAL DES PARTICIPANT VISIBLE UNIQUEMENT EN VERSION tablette/desktop -->
+
       <div class="container-list-sub-desktop">
         <div class="list-sub">
           <h2>Participant :</h2>
@@ -103,6 +107,7 @@
       </div>
     </header>
     <main>
+      <!-- DEBUT DE LA SECTION INFORMATION GENERALE -->
       <h1>Feuille du tournoi : <br /><em>*Nom du tournoi*</em></h1>
       <div class="main-container-tournament-sheet">
         <div class="info-general-tournament-sheet">
@@ -188,6 +193,8 @@
           </div>
         </div>
       </div>
+
+      <!-- DEBUT DE LA SECTION STRUCTURE DU TOURNOI -->
       <div class="main-container-structure">
         <div class="container-structure-tournament">
           <div class="title-sheet-tournament dropdown-structure-tournament">
