Fin de conception de la page Tournamentmanagement.html et allegement du css de l'index.html

--- a/html/profilPrivate.html
+++ b/html/profilPrivate.html
@@ -287,7 +287,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
@@ -311,7 +311,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
@@ -335,7 +335,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
@@ -359,7 +359,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
@@ -383,7 +383,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
@@ -407,7 +407,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
@@ -431,7 +431,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
@@ -455,7 +455,7 @@
               <p>Tue dec 24</p>
               <img src="../assets/img/General/clock.png" alt="Icone horloge" />
               <p>19:00 AM CET</p>
-              <p>in 3 days</p>
+              <p>Terminé</p>
             </div>
             <div class="divider-card"></div>
             <h5>Région</h5>
