--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,8 @@
     />
     <!----------------------------------- -->
     <link rel="stylesheet" href="../assets/css/index.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
   </head>
 
   <body>
